@@ -7,10 +7,10 @@ import com.amazonaws.services.lambda.runtime.events.APIGatewayProxyResponseEvent
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.nimbusds.oauth2.sdk.OAuth2Error;
 import uk.gov.di.authentication.oidc.entity.TrustMarkResponse;
-import uk.gov.di.authentication.shared.entity.AuthenticationValues;
+import uk.gov.di.authentication.shared.entity.CredentialTrustLevel;
 import uk.gov.di.authentication.shared.services.ConfigurationService;
 
-import java.util.List;
+import java.util.Arrays;
 
 import static uk.gov.di.authentication.shared.helpers.ApiGatewayResponseHelper.generateApiGatewayProxyResponse;
 import static uk.gov.di.authentication.shared.helpers.WarmerHelper.isWarming;
@@ -49,10 +49,6 @@ public class TrustMarkHandler
         return new TrustMarkResponse(
                 configurationService.getBaseURL().orElseThrow(),
                 configurationService.getBaseURL().orElseThrow(),
-                List.of(
-                        AuthenticationValues.LOW_LEVEL,
-                        AuthenticationValues.MEDIUM_LEVEL,
-                        AuthenticationValues.HIGH_LEVEL,
-                        AuthenticationValues.VERY_HIGH_LEVEL));
+                Arrays.asList(CredentialTrustLevel.values()));
     }
 }
